Added CSS Layout

--- a/layouts/Layout3.html
+++ b/layouts/Layout3.html
@@ -11,7 +11,8 @@ div
 {
     display:block;
     width:400px;
-    height:200px;
+    height:100px;
+    float: left;
 }
     
 .b1
@@ -33,6 +34,7 @@ div
 .b4
 {
     background-color:orange;
+    clear: left;
 }
 
 .b5
