--- a/layouts/Layout4.html
+++ b/layouts/Layout4.html
@@ -12,6 +12,7 @@ div
     display:block;
     width:400px;
     height:200px;
+    float: left;
 }
     
 .b1
@@ -22,12 +23,15 @@ div
 .b2
 {
     background-color:yellow;
+    width: 200px;
+    clear: left;
 }
 
 .b3
 {
     background-color:blue;
     color:white;
+    width: 200px;
 }
 
 .b4
@@ -39,11 +43,14 @@ div
 {
     background-color:purple;
     color:white;
+    width: 200px;
+    clear: left;
 }
 
 .b6
 {
     background-color:darksalmon;
+    width: 200px;
 }
 
 
