--- a/layouts/Layout8.html
+++ b/layouts/Layout8.html
@@ -10,13 +10,16 @@ body
 div
 {
     display:block;
-    width:400px;
+    width:300px;
     height:200px;
+    float: right;
+    clear: right;
 }
     
 .b1
 {
     background-color:red;
+    width: 600px;
 }
 
 .b2
@@ -44,6 +47,10 @@ div
 .b6
 {
     background-color:darksalmon;
+    height: 800px;
+    width: 300px;
+    float: none;
+    clear: none;
 }
 
 
