--- a/layouts/LayoutBonus.html
+++ b/layouts/LayoutBonus.html
@@ -10,40 +10,54 @@ body
 div
 {
     display:block;
-    width:400px;
+    width:200px;
     height:200px;
+    float: left;
+    animation-name: fase-in;
+}
+
+@keyframes fase-in
+{
+    from {opacity: 0;}
+    to {opacity: 3;}
 }
     
 .b1
 {
     background-color:red;
+    animation-duration: 6s;
 }
 
 .b2
 {
     background-color:yellow;
+    animation-duration: 9s;
 }
 
 .b3
 {
     background-color:blue;
     color:white;
+    animation-duration: 12s;
 }
 
 .b4
 {
     background-color:orange;
+    animation-duration: 15s;
 }
 
 .b5
 {
     background-color:purple;
     color:white;
+    animation-duration: 18s;
 }
 
 .b6
 {
     background-color:darksalmon;
+    animation-duration: 21s;
 }
 
 
