--- a/layouts/Layout6.html
+++ b/layouts/Layout6.html
@@ -10,7 +10,7 @@ body
 div
 {
     display:block;
-    width:400px;
+    width:600px;
     height:200px;
 }
     
@@ -22,6 +22,9 @@ div
 .b2
 {
     background-color:yellow;
+    width: 300px;
+    height: 600px;
+    float: right;
 }
 
 .b3
