--- a/layouts/Layout9.html
+++ b/layouts/Layout9.html
@@ -9,19 +9,22 @@ body
     
 div
 {
-    display:block;
-    width:400px;
+    display:inline-block;
+    width:300px;
     height:200px;
 }
     
 .b1
 {
     background-color:red;
+    width: 600px;
 }
 
 .b2
 {
     background-color:yellow;
+    height: 1600px;
+    float: left;
 }
 
 .b3
@@ -44,6 +47,10 @@ div
 .b6
 {
     background-color:darksalmon;
+    position: fixed;
+    width: 100px;
+    top: 100px;
+    right: 30px;
 }
 
 
